feat: Implementing Group Features
